# xtorch-dist

./: CMakeLists.txt  LICENSE.md  README.md
include/: distributed_data_parallel_base.h  my_from_scratch_ddp_with_mpi_nccl.h
src/: my_from_scratch_ddp_with_mpi_nccl.cpp
test/: main_mpi_nccl_ddp.cpp
